k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evercare
  labels:
    name: evercare
    environment: production
